# video-aggregator

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml  response.json
backend/src/: file_backed.rs  find_new.rs  length_filter.rs  main.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
src/: length_filter.rs  main.rs
templates/: index.html
