[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }
futures-util = "0.3.30"
reqwest = { version = "0.12.7", features = ["blocking"] }
chrono = { version = "0.4.38", features = ["serde"] }
