[package]
name = "youtube"
version = "0.1.0"
edition = "2021"

[dependencies]
# this is the development version of Yew
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
serde_json = "1.0.127"
serde = "1.0.209"
reqwest = { version = "0.12.7", features = ["blocking"] }
wasm-bindgen-futures = "0.4"
